[package]
name = "sond-bevy-enum-components"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = ["macros"]

[dependencies]
macros = { package = "sond-bevy-enum-components-macros", path = "macros" }
bevy_ecs = "0.11"

[dev-dependencies]
sond-bevy-enum-components = { version = "0.1.0", path = "." }
bevy = { version = "0.11", default-features = false }
