[package]
name = "sond-bevy-enum-components"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = ["macros"]

[features]
reflect = ["bevy_reflect", "bevy_app"]

[dependencies]
macros = { package = "sond-bevy-enum-components-macros", path = "macros" }
bevy_ecs = "0.14.2"
bevy_app = { version = "0.14.2", optional = true }
bevy_reflect = { version = "0.14.2", optional = true }

[dev-dependencies]
sond-bevy-enum-components = { version = "0.1.0", path = "." }
bevy = { version = "0.13", default-features = false }
