[package]
name = "sond-bevy-enum-components-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
convert_case = "0.6.0"
proc-macro-crate = { version = "2", path = "../proc-macro-crate" }
